--- a/GitHubGoonies/GitHubGoonies/Base.lproj/Main.storyboard
+++ b/GitHubGoonies/GitHubGoonies/Base.lproj/Main.storyboard
@@ -1,25 +1,101 @@
 <?xml version="1.0" encoding="UTF-8" standalone="no"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="6211" systemVersion="14A298i" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="8191" systemVersion="14F27" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" initialViewController="Hj8-fD-jOq">
     <dependencies>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="6204"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="8154"/>
+        <capability name="Aspect ratio constraints" minToolsVersion="5.1"/>
+        <capability name="Constraints to layout margins" minToolsVersion="6.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
-        <scene sceneID="tne-QT-ifu">
+        <!--Goonies-->
+        <scene sceneID="roU-3J-5bQ">
             <objects>
-                <viewController id="BYZ-38-t0r" customClass="ViewController" customModuleProvider="target" sceneMemberID="viewController">
-                    <layoutGuides>
-                        <viewControllerLayoutGuide type="top" id="y3c-jy-aDJ"/>
-                        <viewControllerLayoutGuide type="bottom" id="wfy-db-euE"/>
-                    </layoutGuides>
-                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
+                <tableViewController id="g0F-Ed-jGC" customClass="GooniesTableViewController" customModule="GitHubGoonies" customModuleProvider="target" sceneMemberID="viewController">
+                    <tableView key="view" clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" dataMode="prototypes" style="plain" separatorStyle="default" rowHeight="100" sectionHeaderHeight="28" sectionFooterHeight="28" id="MOh-2Z-sNy">
                         <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
-                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
+                        <prototypes>
+                            <tableViewCell clipsSubviews="YES" contentMode="scaleToFill" selectionStyle="default" indentationWidth="10" reuseIdentifier="GoonieCell" id="uNU-kQ-Gye" customClass="GoonieTableViewCell" customModule="GitHubGoonies" customModuleProvider="target">
+                                <rect key="frame" x="0.0" y="92" width="600" height="100"/>
+                                <autoresizingMask key="autoresizingMask"/>
+                                <tableViewCellContentView key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" tableViewCell="uNU-kQ-Gye" id="kQb-ta-qER">
+                                    <rect key="frame" x="0.0" y="0.0" width="600" height="99.5"/>
+                                    <autoresizingMask key="autoresizingMask"/>
+                                    <subviews>
+                                        <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Kpi-eZ-mvy">
+                                            <rect key="frame" x="105" y="13" width="477" height="73.5"/>
+                                            <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                            <color key="textColor" cocoaTouchSystemColor="darkTextColor"/>
+                                            <nil key="highlightedColor"/>
+                                        </label>
+                                        <imageView userInteractionEnabled="NO" contentMode="scaleToFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" misplaced="YES" translatesAutoresizingMaskIntoConstraints="NO" id="50a-sg-qEJ">
+                                            <rect key="frame" x="20" y="8" width="77" height="73.5"/>
+                                            <constraints>
+                                                <constraint firstAttribute="width" secondItem="50a-sg-qEJ" secondAttribute="height" multiplier="28:27" constant="1" id="J44-Of-mEy"/>
+                                            </constraints>
+                                        </imageView>
+                                    </subviews>
+                                    <constraints>
+                                        <constraint firstAttribute="trailingMargin" secondItem="Kpi-eZ-mvy" secondAttribute="trailing" constant="10" id="2Vh-su-ePZ"/>
+                                        <constraint firstItem="Kpi-eZ-mvy" firstAttribute="leading" secondItem="50a-sg-qEJ" secondAttribute="trailing" constant="10" id="5Oi-gi-5Oc"/>
+                                        <constraint firstItem="Kpi-eZ-mvy" firstAttribute="top" secondItem="kQb-ta-qER" secondAttribute="topMargin" constant="5" id="7Tn-rK-UTX"/>
+                                        <constraint firstItem="50a-sg-qEJ" firstAttribute="top" secondItem="kQb-ta-qER" secondAttribute="topMargin" constant="5" id="Ok6-JJ-TMB"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="50a-sg-qEJ" secondAttribute="bottom" constant="5" id="UaG-c0-9bk"/>
+                                        <constraint firstItem="50a-sg-qEJ" firstAttribute="leading" secondItem="kQb-ta-qER" secondAttribute="leadingMargin" constant="10" id="cCh-MZ-qlS"/>
+                                        <constraint firstAttribute="bottomMargin" secondItem="Kpi-eZ-mvy" secondAttribute="bottom" constant="5" id="dPG-cg-pAX"/>
+                                    </constraints>
+                                </tableViewCellContentView>
+                                <connections>
+                                    <outlet property="avatarImageView" destination="50a-sg-qEJ" id="kXd-1s-OX4"/>
+                                    <outlet property="userNameLabel" destination="Kpi-eZ-mvy" id="ExD-kl-AhI"/>
+                                    <segue destination="AbB-Ni-nIB" kind="show" id="h1V-aq-d8K"/>
+                                </connections>
+                            </tableViewCell>
+                        </prototypes>
+                        <connections>
+                            <outlet property="dataSource" destination="g0F-Ed-jGC" id="XNT-Lu-yw9"/>
+                            <outlet property="delegate" destination="g0F-Ed-jGC" id="VW8-1a-TNS"/>
+                        </connections>
+                    </tableView>
+                    <navigationItem key="navigationItem" title="Goonies" id="6MQ-id-8J7"/>
+                </tableViewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="Thx-1p-ta2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="147" y="361"/>
+        </scene>
+        <!--View Controller-->
+        <scene sceneID="zOm-Gt-rUc">
+            <objects>
+                <viewController id="AbB-Ni-nIB" sceneMemberID="viewController">
+                    <layoutGuides>
+                        <viewControllerLayoutGuide type="top" id="J8v-er-I79"/>
+                        <viewControllerLayoutGuide type="bottom" id="1f0-GP-LVs"/>
+                    </layoutGuides>
+                    <view key="view" contentMode="scaleToFill" id="2o7-eG-V5d">
+                        <rect key="frame" x="0.0" y="0.0" width="600" height="600"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                     </view>
                 </viewController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SeD-qk-Aml" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
+            <point key="canvasLocation" x="832" y="361"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="ZyH-yD-7uZ">
+            <objects>
+                <navigationController id="Hj8-fD-jOq" sceneMemberID="viewController">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="Xo7-gs-e3g">
+                        <rect key="frame" x="0.0" y="0.0" width="320" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <connections>
+                        <segue destination="g0F-Ed-jGC" kind="relationship" relationship="rootViewController" id="ujW-Zr-gsz"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="j5p-xl-2X2" userLabel="First Responder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-567" y="403"/>
         </scene>
     </scenes>
 </document>
