--- a/GitHubGoonies/GitHubGoonies/Base.lproj/Main.storyboard
+++ b/GitHubGoonies/GitHubGoonies/Base.lproj/Main.storyboard
@@ -106,11 +106,11 @@
                                 <textInputTraits key="textInputTraits"/>
                             </textField>
                             <button opaque="NO" contentMode="scaleToFill" restorationIdentifier="addAvatar" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="F5b-lr-ePA" customClass="PrettyButton" customModule="GitHubGoonies" customModuleProvider="target">
-                                <rect key="frame" x="230" y="354" width="140" height="140"/>
+                                <rect key="frame" x="230" y="324" width="140" height="140"/>
                                 <color key="backgroundColor" red="0.70222335979999995" green="1" blue="0.71817650519999998" alpha="1" colorSpace="calibratedRGB"/>
                                 <constraints>
-                                    <constraint firstAttribute="width" constant="140" id="A4x-i3-IYy"/>
-                                    <constraint firstAttribute="height" constant="140" id="gLf-2p-XAK"/>
+                                    <constraint firstAttribute="width" constant="140" id="0uX-o2-5rJ"/>
+                                    <constraint firstAttribute="height" constant="140" id="LZq-Cg-XpQ"/>
                                 </constraints>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
                                 <state key="normal" title="ADD AVATAR"/>
@@ -138,15 +138,14 @@
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                         <constraints>
-                            <constraint firstItem="F5b-lr-ePA" firstAttribute="top" secondItem="fuI-o7-0Vt" secondAttribute="bottom" constant="50" id="0Wp-w4-jt9"/>
-                            <constraint firstAttribute="trailing" secondItem="F5b-lr-ePA" secondAttribute="trailing" constant="230" id="2v2-jg-njP"/>
-                            <constraint firstItem="F5b-lr-ePA" firstAttribute="leading" secondItem="eAo-QJ-QVe" secondAttribute="leading" constant="230" id="5Tm-c4-pe3"/>
                             <constraint firstItem="rCv-HI-lFW" firstAttribute="top" secondItem="i6A-TU-DRT" secondAttribute="bottom" constant="10" id="Fme-I7-rWW"/>
                             <constraint firstItem="NRN-fB-pEc" firstAttribute="leading" secondItem="eAo-QJ-QVe" secondAttribute="leading" constant="10" id="JZb-Fm-Oq0"/>
                             <constraint firstItem="i6A-TU-DRT" firstAttribute="top" secondItem="aer-0v-pRG" secondAttribute="bottom" constant="10" id="Jmh-ek-Kds"/>
                             <constraint firstItem="rCv-HI-lFW" firstAttribute="leading" secondItem="eAo-QJ-QVe" secondAttribute="leading" constant="10" id="MSK-5w-Xd4"/>
+                            <constraint firstItem="F5b-lr-ePA" firstAttribute="top" secondItem="fuI-o7-0Vt" secondAttribute="bottom" constant="20" id="MWM-oE-8Ny"/>
                             <constraint firstAttribute="trailing" secondItem="rCv-HI-lFW" secondAttribute="trailing" constant="10" id="McZ-dy-l2E"/>
                             <constraint firstItem="NRN-fB-pEc" firstAttribute="top" secondItem="rCv-HI-lFW" secondAttribute="bottom" constant="10" id="QFl-CD-GRc"/>
+                            <constraint firstItem="F5b-lr-ePA" firstAttribute="centerX" secondItem="eAo-QJ-QVe" secondAttribute="centerX" id="SXD-tU-r0f"/>
                             <constraint firstAttribute="trailing" secondItem="i6A-TU-DRT" secondAttribute="trailing" constant="10" id="YUx-r4-NbT"/>
                             <constraint firstAttribute="trailing" secondItem="NRN-fB-pEc" secondAttribute="trailing" constant="10" id="qqY-e0-88f"/>
                             <constraint firstItem="fuI-o7-0Vt" firstAttribute="top" secondItem="NRN-fB-pEc" secondAttribute="bottom" constant="10" id="sjD-XQ-czb"/>
